--- a/app/components/css/main.module.css
+++ b/app/components/css/main.module.css
@@ -22,15 +22,6 @@
     height: 48px;
 }
 
-.mobilenavbar{
-    column-span: all;
-    position: fixed;
-    bottom: 0;
-    margin: 0 auto;
-    width: 100%;
-    padding:1em;
-}
-
 
 .headerHeading{
     grid-column: 3/10;
@@ -74,4 +65,13 @@
     grid-column:7/12;
     grid-row: 9/22;
     z-index: -1;
+}
+
+.jumbotronText{
+    grid-row: 22/23;
+    grid-column: 1/12;
+    text-align: center;
+    column-span: all;
+    margin-top: 1em;
+    margin-bottom: 6em;
 }
