--- a/app/components/css/main.module.css
+++ b/app/components/css/main.module.css
@@ -1,62 +1,165 @@
-.maincontainer{
-    display: grid;
-    grid-template-columns: (12, 1fr);
-    grid-template-rows: (auto, 1fr);
-    gap: 8px;
+@media (min-width:700px){
+    .maincontainer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width: 100vw;
+    }
+    
+    .headerHeading{
+        font-size: 3rem;
+        font-weight: 700;
+        margin-top: 2em;
+        position: relative;
+        max-width: 550px;
+        text-align: center;
+        /* border: 1px solid red; */
+    }
+    .headerHeading span{
+        color: var(--primary);
+        font-size: 5rem;
+        font-weight: 700;
+        letter-spacing: 15px;
+    }
+    .headerSubText{
+        font-size: 1.5rem;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        text-align: center;
+        max-width: 600px;
+    }
+    
+    .headerButton{
+        background-color: var(--secondary);
+        padding: 0.5em 1em;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 0.5em;
+        border-radius: 0.5em;
+        margin-top: 1em;
+    }
+    .jumbotronContainer{
+        /* border: 1px solid black; */
+        width: 100%;
+        display: flex;
+        padding: 0;
+        margin: 0;
+        margin-bottom: 5em;
+        margin-top: 2em;
+    }
+    
+    .jumbotronImage{
+        /* border: 1px solid green; */
+        grid-column: 1/4;
+        grid-row: 1/4;
+        object-fit: cover;
+    }
+    .jumbotronCircle{
+        transform: rotate(180deg);
+        position: absolute;
+        z-index: -1;
+        left: 0;
+
+    }
+    
+    .jumbotronText{
+        text-align: center;
+        margin-top: 1em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        min-width: 700px;
+    }
+    .jumbotronText h1{
+        font-size: 3rem;
+        font-weight: 700;
+        margin-bottom: 0.5em;
+        color: var(--primary);
+        margin-left: 0.5em;
+    }
+    .jumbotronText p{
+        font-size: 1rem;
+        margin-bottom: 1em;
+        max-width: 400px;
+        font-weight: 580;;
+    }
 }
 
 
+  @media (max-width: 690px) {
+    .maincontainer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+    .headerHeading{
+        font-size: 2rem;
+        font-weight: 400;
+        margin-top: 1em;
+        text-align: center;
+        /* border: 1px solid red; */
+    }
+    .headerHeading span{
+        color: var(--primary);
+        font-size: 3rem;
+        font-weight: 700;
+    }
+    .headerSubText{
+        font-size: 1rem;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        text-align: center;
+        max-width: 400px;
+    }
+    .headerButton{
+        background-color: var(--secondary);
+        padding: 0.5em 1em;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 0.5em;
+        border-radius: 0.5em;
+        margin-top: 1em;
+        max-width: 200px;
+    }
+    .jumbotronContainer{
+        display: flex;
+        flex-direction: column;
+        position: relative;
+    }
+    .jumbotronText{
+        order: 1;
+        text-align: center;
+        margin-bottom: 4em;
+        margin-top: 2.5em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+    .jumbotronText h1{
+        font-size: 1.5rem;
+        font-weight: 700;
+        margin-bottom: 0.5em;
+        color: var(--primary);
+    }
+    .jumbotronText p{
+        font-size: 1rem;
+        margin-bottom: 1em;
+        font-weight: 580;
+        max-width: 400px;
+    }
+    .jumbotronCircle{
+        position: absolute;
+        z-index: -1;
+        right: 0;
+        top: 12em;
+    }
+
+}
 
 
-.headerHeading{
-    grid-column: 3/10;
-    grid-row: 2/3;
-    text-align: center;
-    font-size: 1.5rem;
-    margin-top: 2em;
-    position: relative;
-    left: 0.5em;
-}
-.headerHeading span{
-    color: var(--primary);
-    font-size: 4rem;
-    font-weight: 700;
-
-}
-.headerSubText{
-    grid-column: 1/12;
-    grid-row: 3/4;
-    text-align: center;
-}
-
-.headerButton{
-    grid-row: 4/5;
-    grid-column: 5/8;
-    background-color: var(--secondary);
-    padding: 0.5em 1em;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 0.5em;
-    border-radius: 0.5em;
-    margin-top: 1em;
-}
-
-.jumbotronImage{
-    grid-column: 1/10;
-    grid-row: 6/13;
-}
-.jumbotronCircle{
-    grid-column:7/12;
-    grid-row: 9/22;
-    z-index: -1;
-}
-
-.jumbotronText{
-    grid-row: 22/23;
-    grid-column: 1/12;
-    text-align: center;
-    column-span: all;
-    margin-top: 1em;
-    margin-bottom: 6em;
-}
