--- a/app/components/css/PricingCard.module.css
+++ b/app/components/css/PricingCard.module.css
@@ -2,68 +2,53 @@
 .pricingCardContainer{
     display: flex;
     justify-content: center;
-    margin-top: 1em;
+    margin-top: 3em;
     position: relative;
+    align-items: center;
+    /* border: 1px solid #E5E5E5; */
+
 }
 .pricingCardStyle{
-    position: absolute;
-    z-index: -1;
-    top: 13em;
-    left: 0;
-    transform: rotate(180deg);
+    display: none;
 }
 
 .pricingCard{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 1em;
-    margin-top: 1em;
-    padding: 2em;
+    display: flex;
+    gap: 12px;
 }
 
-@media (min-width: 768px){
-    .pricingCard{
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
-        max-width: 1200px;
-    }
-    .pricingCardStyle{
-        display: none;
-    }
-}
+
 
 .featureItem{
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: center;
-    margin-bottom: 1em;
-
+    gap: 8px;
+    margin-bottom: 8px;
 }
-
-.eclipseContainer{
-    margin-left: 3em;
-}
-.cardText{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 1em;
-}
-
 .upgradeButtonContainer{
     display: flex;
     justify-content: center;
     margin-top: 1em;
 }
 
-.pricingCardHeader{
-    background-color: white;
-    padding: 1em;
-    display: flex;
-    justify-content: space-between;
-    border-radius: 20px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
-    height: 15em;
-}
 
+@media (max-width:480px) {
+    .pricingCardContainer{
+        margin-bottom: 6em;
+
+    }
+    .pricingCard{
+        flex-direction: column;
+        gap: 10px;
+        max-width: 410px;
+    }
+    .pricingCardStyle{
+        position: absolute;
+        display: block;
+        z-index: -1;
+        bottom: -70px;
+        right: 0;
+       
+    }
+}
