--- a/app/components/css/main.module.css
+++ b/app/components/css/main.module.css
@@ -1,4 +1,4 @@
-@media (min-width:700px){
+@media (min-width:768px){
     .maincontainer{
         display: flex;
         flex-direction: column;
@@ -43,6 +43,9 @@
         /* border: 1px solid black; */
         width: 100%;
         display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         padding: 0;
         margin: 0;
         margin-bottom: 5em;
@@ -51,12 +54,14 @@
     
     .jumbotronImage{
         /* border: 1px solid green; */
-        grid-column: 1/4;
-        grid-row: 1/4;
+        grid-column: 1/3;
+        grid-row: 1/3;
+
         object-fit: cover;
+
     }
     .jumbotronCircle{
-        transform: rotate(180deg);
+        transform: rotate(90deg);
         position: absolute;
         z-index: -1;
         left: 0;
@@ -71,7 +76,8 @@
         align-items: center;
         justify-content: center;
         position: relative;
-        min-width: 700px;
+        width: 700px;
+        order: 1;
     }
     .jumbotronText h1{
         font-size: 3rem;
